--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,16 @@
 :root {
   --color-primary: #e3b748;
   --color-white: #ffffff;
+  --color-black: #111111;
   --color-subtitle: #585858;
 }
 
 * {
   box-sizing: border-box;
+}
+
+
+body {
+  background-color: var(--color-black);
+  color: var(--color-white)
 }
