--- a/src/components/FaqSection/Accordion/FaqAccordion.module.css
+++ b/src/components/FaqSection/Accordion/FaqAccordion.module.css
@@ -1,12 +1,11 @@
 .accordionWrapper{
     .accordionSummary {
-       
-        background-color: var(--color-black);
+        background-color: #1d1d1d;
         color: var(--color-white);
     }
 
     .accordionDetails{
-        background-color: var(--color-black);
+        background-color: #1d1d1d;
         color: var(--color-subtitle);
     }
 }
