--- a/src/components/HeroSection/HeroSection.module.css
+++ b/src/components/HeroSection/HeroSection.module.css
@@ -1,5 +1,7 @@
 
 .heroSectionWrapper{
+    background-color: var(--color-black);
+    margin-bottom: 100px;
     ::placeholder{
         color: var(--color-subtitle) !important;
     }
