--- a/src/components/Carousel/CarouselRightNavigation/CarouselRightNavigation.module.css
+++ b/src/components/Carousel/CarouselRightNavigation/CarouselRightNavigation.module.css
@@ -1,7 +1,7 @@
 .rightNavigation {
     cursor: pointer;
     position: absolute;
-    right: 20%;
+    right: 30px;
     top: 10%;
     transform: translateY(-50%);
     z-index: 10;
