--- a/src/components/FaqSection/FaqSection.module.css
+++ b/src/components/FaqSection/FaqSection.module.css
@@ -1,8 +1,12 @@
 .faqWrapper{
+    margin-block: 100px;;
+}
+
+.accordionWrapper{
     padding-block: 10px;
     border-top: 1px solid var(--color-subtitle);
 }
 
-.faqWrapper:first-child{
+.accordionWrapper:first-child{
     border-top: none;
 }
