--- a/src/components/Footer/FooterNav/FooterNav.module.css
+++ b/src/components/Footer/FooterNav/FooterNav.module.css
@@ -1,5 +1,10 @@
 .navbarWrapper{
-    padding-top: 30px;
     background-color: var(--color-black) !important;
     box-shadow: none !important;
+}
+
+.icon{
+    :hover{
+        background-color: red;
+    }
 }
