--- a/src/index.css
+++ b/src/index.css
@@ -7,15 +7,20 @@
 
 * {
   box-sizing: border-box;
+  margin: 0;
 }
 
 
 body {
-  background-color: var(--color-black);
+  background-color: #1d1d1d;
   color: var(--color-white)
 }
 
 
 .swiper-slide{
   width: auto !important;
+}
+
+.css-1sopiki-MuiPaper-root-MuiAccordion-root{
+  box-shadow: none !important;
 }
